force-app/main/default/objects/GTM_Assessment_Supplement__mdt/GTM_Assessment_Supplement__mdt.object-meta.xml
<CustomObject>
    <label>GTM Assessment Supplement</label>
    <pluralLabel>GTM Assessment Supplements</pluralLabel>
</CustomObject>