force-app/main/default/objects/GTM_Assessment_Supplement__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>Inactive questions are not served and are not scored.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>