force-app/main/default/objects/GTM_Assessment_Supplement__mdt/fields/Horizon_Driver__c.field-meta.xml
<CustomField>
    <fullName>Horizon_Driver__c</fullName>
    <label>Horizon Driver</label>
    <description>Marks the one question in a set whose answered option supplies the readout&#x27;s horizon line. The horizon text is carried per-option in Options_JSON__c so no Apex has to know this question&#x27;s key -- the same reason nothing in Apex branches on a platform name.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>