force-app/main/default/objects/GTM_Assessment_Supplement__mdt/fields/Index_Key__c.field-meta.xml
<CustomField>
    <fullName>Index_Key__c</fullName>
    <label>Index Key</label>
    <description>Name of the index the scored questions in this set sum into, stored under Supplement_Scores__c. A separate named index rather than an addition to the 32: these measure whether the target platform&#x27;s prerequisite stack exists, which is a different question from how hard the estate is to move.</description>
    <type>Text</type>
    <length>80</length>
</CustomField>