force-app/main/default/objects/GTM_Assessment_Supplement__mdt/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>Key</label>
    <description>Answer key. Must NOT collide with any readiness or complexity dimension key -- the build script fails the build if it does, because a supplement that lands on a dimension key would quietly enter the 32.</description>
    <required>true</required>
    <type>Text</type>
    <length>80</length>
</CustomField>