force-app/main/default/objects/GTM_Assessment_Supplement__mdt/fields/Options_JSON__c.field-meta.xml
<CustomField>
    <fullName>Options_JSON__c</fullName>
    <label>Options JSON</label>
    <description>JSON array of options with values 1-3, or NULL for an unscored verbatim probe. Some signals do not survive being turned into a number; those are recorded as what the prospect actually said and nothing is computed from them.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>