force-app/main/default/objects/GTM_Assessment_Supplement__mdt/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <description>The question as the prospect reads it.</description>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>