force-app/main/default/objects/GTM_Assessment_Supplement__mdt/fields/Scored__c.field-meta.xml
<CustomField>
    <fullName>Scored__c</fullName>
    <label>Scored</label>
    <description>Whether this question contributes to the set&#x27;s index. False means verbatim capture only. Never contributes to the readiness total either way.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>