force-app/main/default/objects/GTM_Assessment_Supplement__mdt/fields/Set_Key__c.field-meta.xml
<CustomField>
    <fullName>Set_Key__c</fullName>
    <label>Set Key</label>
    <description>The supplement set this question belongs to; matched against GTM_Assessment_Pair__mdt.Supplement_Set__c.</description>
    <required>true</required>
    <type>Text</type>
    <length>80</length>
</CustomField>